Fix button issue on mobile

--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -466,3 +466,8 @@ border-radius: 8px 8px 8px 8px;
   margin:0px auto; 
 }  
 }
+@media (max-width: 576px){
+.close-btn{
+  display:none;
+  }  
+}
